# MyCourseProjects

./: README.md
3dmm/final/: .gitattributes  3dmm_final.sln  3dmm_final.vcxproj  3dmm_final.vcxproj.filters  Makefile  README.md  clshare.h  clstruct.h  main.cpp  sift.cl  sift.cpp  sift.h  utils.cpp  utils.h
3dmm/hw1/: CMakeLists.txt  README.md  defs.hpp  main.cpp  objread.cpp  objread.hpp  portab.hpp  raster.cpp  raster.hpp  transform.cpp  transform.hpp
ACV/ACV_HW1/: ME.cpp  ME.hpp  README.md  main.cpp
ACV/ACV_HW2/: report.tex
ACV/ACV_HW3/: Makefile  OpticalFlow.cpp  OpticalFlow.hpp  README.md  VectorType.hpp  draw_hw.m  main.cpp  pgm.cpp
ADSP/HW1/: mini_max.m
ADSP/HW2/: freq_samp.m  run.m
ADSP/HW3/: C420.m  run.m
ADSP/HW4/: ImageBlock2Col.m  SSIM.m  rum.m
CVSD/final/: FAdd.v  FAdd_tb.v  FMul.v  FMul_tb.v  FSqrt.v  FSqrt_table.v  FSqrt_tb.v  Normalizer.v  README.md
DIP/final/: GradNoise2D.cpp  GradNoise2D.h  Makefile  README.md  main.cpp  pgm.cpp  pgm.h
DIP/hw1/: README  prob1.cpp  prob2.cpp  psnr.py
DIP/hw2/: README  edge.cpp  edge.h  pgm.h  prob1.cpp  prob2.cpp
DIP/hw3/: README  morph.cpp  morph.h  pgm.cpp  prob1.cpp  prob2.cpp  prob3.cpp  texture.cpp  texture.h
DIP/hw4/: README  bbox.cpp  bbox.h  cal_hu.m  fft.cpp  fft.h  hw1_util.cpp  hw1_util.h  ocr.cpp  ocr.h  prob1.cpp  prob2-cut.cpp  prob2.cpp
ML/final/: README.md  aboost.py  (+10 more)
VFX/hw2/: CMakeLists.txt  Doxygen  README.md  geometry.h  geometry.ipp  kdtree.cpp  kdtree.h  main.cpp  panorama.cpp  panorama.h  pgm.cpp  pgm.h
VFX/hw2/siftpp/: sift-driver.cpp  sift.cpp  sift.hpp  sift.ipp
(+56 files in other folders)
